--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,42 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
-    "lib": [
-      "es2020"
-    ],
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true,
+    "baseUrl": ".",
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "declaration": true,
+    "declarationMap": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "importHelpers": true,
+    "lib": [
+      "es2020",
+      "es6"
+    ],
+    "preserveSymlinks": true,
+    "preserveWatchOutput": true,
+    "pretty": false,
+    "strict": true,
+    "sourceMap": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "outDir": "dist",
+    "types": [
+      "node"
+    ]
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.json"
   ],
   "exclude": [
-    "node_modules"
-  ]
+    "dist",
+    "test",
+    "node_modules",
+    "scripts",
+    "src/scaffold/templates/*"
+  ],
+  "ts-node": {
+    "esm": true
+  }
 }
+  
