--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -1,4 +1,4 @@
-name: Run unit tests
+name: Unit tests
 
 on:
   push:
@@ -15,7 +15,7 @@ env:
 
 jobs:
   circuit:
-    name: Circuit & QueryBuilder Tests
+    name: Unit tests
     runs-on: ubuntu-latest
 
     steps:
