--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "default": "./dist/es/index.js"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf ./dist/* && tsc",
     "start": "node dist/index.js",
     "dev": "tsc --watch",
     "lint": "eslint . --ext .ts",
