--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "author": "Intrinsic Technologies",
   "license": "MIT",
   "description": "Keystore Rollup SDK",
-  "keywords": ["keystore", "evm", "axiom"],
+  "keywords": [
+    "keystore",
+    "evm",
+    "axiom"
+  ],
   "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "typings": "dist/index.d.ts",
@@ -19,8 +23,8 @@
     "build": "rm -rf ./dist/* && tsc",
     "start": "node dist/index.js",
     "dev": "tsc --watch",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "eslint '**/*.ts'",
+    "lint:fix": "eslint '**/*.ts' --fix",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
@@ -29,8 +33,8 @@
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.10",
-    "@typescript-eslint/eslint-plugin": "^8.21.0",
-    "@typescript-eslint/parser": "^8.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "eslint": "^9.19.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
@@ -40,6 +44,7 @@
   "dependencies": {
     "@noble/hashes": "^1.7.1",
     "@noble/secp256k1": "^2.2.3",
+    "@open-rpc/client-js": "^1.8.1",
     "dotenv": "^16.4.7",
     "ts-node": "^10.9.2"
   },
