--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "lint:fix": "eslint '**/*.ts' --fix",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "format:check": "npx prettier . --check",
+    "format:fix": "npx prettier . --write"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -30,8 +32,10 @@
     "@typescript-eslint/eslint-plugin": "^8.21.0",
     "@typescript-eslint/parser": "^8.21.0",
     "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
+    "prettier": "3.4.2",
     "ts-jest": "^29.2.5",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
