--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@axiom-crypto/keystore-sdk",
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.0-rc.0",
   "author": "Intrinsic Technologies",
   "license": "MIT",
   "description": "Keystore Rollup SDK",
