--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "types": "index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "rm -rf ./dist/* && tsc && node scripts/postTsc.cjs",
+    "build": "rm -rf ./dist/* && tsc && tsc-alias && node scripts/postTsc.cjs",
     "start": "node dist/index.js",
     "dev": "tsc --watch",
     "lint": "eslint '**/*.ts'",
@@ -37,6 +37,8 @@
     "jest": "^29.7.0",
     "prettier": "3.4.2",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.11",
     "tslib": "^2.8.1",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.23.0"
@@ -47,7 +49,6 @@
     "@noble/secp256k1": "^2.2.3",
     "@open-rpc/client-js": "^1.8.1",
     "dotenv": "^16.4.7",
-    "ts-node": "^10.9.2",
     "viem": "^2.22.15"
   },
   "publishConfig": {
