--- a/.prettierignore
+++ b/.prettierignore
@@ -1,8 +1,13 @@
 # Ignore artifacts:
-build
-coverage
+build/
+coverage/
+dist/
 
 # Ignore lockfiles for PNPM, NPM and YARN
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+
+# Ignore config files
+tsconfig.json
+.prettierrc
